@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015--2021 SUSE LLC
+ * Copyright (c) 2015--2025 SUSE LLC
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -7,10 +7,6 @@
  * FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
  * along with this software; if not, see
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt.
- *
- * Red Hat trademarks are not licensed under GPLv2. No permission is
- * granted to use or replicate Red Hat trademarks that are incorporated
- * in this software or its documentation.
  */
 package com.suse.manager.reactor.messaging;
 
@@ -967,11 +963,11 @@ public class RegisterMinionEventMessageAction implements MessageAction {
                 );
                 if (rme.org == null) {
                     UserNotificationFactory.storeNotificationMessageFor(notificationMessage,
-                            Collections.singleton(RoleFactory.ORG_ADMIN), empty());
+                            Set.of(RoleFactory.ORG_ADMIN));
                 }
                 else {
                     UserNotificationFactory.storeNotificationMessageFor(notificationMessage,
-                            Collections.singleton(RoleFactory.ORG_ADMIN), of(rme.org));
+                            Set.of(RoleFactory.ORG_ADMIN), of(rme.org));
                 }
             }
         };
